--- a/public/receiver.html
+++ b/public/receiver.html
@@ -30,6 +30,7 @@
       type="text/javascript"
       src="https://cdnjs.cloudflare.com/ajax/libs/downloadjs/1.4.1/download.min.js"
     ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
     <script type="text/javascript" src="receiver.js"></script>
   </body>
 </html>
