--- a/public/index.html
+++ b/public/index.html
@@ -25,10 +25,10 @@
           <input type="file" id="file-input" />
         </div>
         <div class="files-list">
-          <div class="title">Shared files</div>
+          <div class="title"><strong>Shared files</strong></div>
           <div class="item">
-            <div class="progress">0%</div>
-            <div class="filename">Abc.txt</div>
+            <!-- <div class="progress">0%</div>
+            <div class="filename">Abc.txt</div> -->
           </div>
         </div>
       </div>
