--- a/public/receiver.html
+++ b/public/receiver.html
@@ -10,6 +10,7 @@
       <div class="screen join-screen active">
         <div class="form">
           <h2>Share your files securely</h2>
+          <h4> Just add the join ID shared with you</h4>
           <div class="form-input">
             <label>Join ID</label>
             <input type="text" id="join-id" />
@@ -21,7 +22,8 @@
       </div>
       <div class="screen fs-screen">
         <div class="files-list">
-          <div class="title">Shared files</div>
+          <div class="title"><strong>Shared files</strong></div>
+          <p>download will start automatically</p>
         </div>
       </div>
     </div>
